# hipda-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: pypi-release.md
src/hipda_cli/: __init__.py  auth.py  cli.py  client.py  models.py  parser.py
tests/: test_cli.py  test_client.py  test_parser.py
